Factored out code into JavaThreadWrapper class