@@ -19,7 +19,7 @@ object Settings {
   lazy val defaultSettings = buildSettings ++ Seq(
     // compile options ScalaUnidoc, unidoc
     scalacOptions ++= Seq("-encoding", "UTF-8", "-feature", "-deprecation", "-unchecked"),
-    javacOptions in(Compile, compile) ++= Seq("--add-modules","java.xml.bind","-source", "9", "-target", "9", "-Xlint:unchecked", "-Xlint:deprecation"),
+    javacOptions in(Compile, compile) ++= Seq("-source", "8", "-target", "8", "-Xlint:unchecked", "-Xlint:deprecation"),
     javaOptions in(Test, run) ++= Seq("-Djava.net.preferIPv4Stack=true") // For location service use
   )
 }
